Copy from anoter repo:
- fixes
- Basil's part

TODO: fix image locations, it's a mess

--- a/wiwii.iOS/Info.plist
+++ b/wiwii.iOS/Info.plist
@@ -23,15 +23,15 @@
     <key>MinimumOSVersion</key>
     <string>8.0</string>
     <key>CFBundleDisplayName</key>
-    <string>wiwii</string>
+    <string>Wiwii</string>
     <key>CFBundleIdentifier</key>
-    <string>com.college.wiwii</string>
+    <string>com.companyname.Wiwii</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>CFBundleName</key>
-    <string>wiwii</string>
+    <string>Wiwii</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
 </dict>
