--- a/wiwii.iOS/wiwii.iOS.csproj
+++ b/wiwii.iOS/wiwii.iOS.csproj
@@ -136,6 +136,10 @@
     <BundleResource Include="Resources\wifiilogo1.png" />
     <BundleResource Include="Resources\fb.png" />
     <BundleResource Include="Resources\gmail.jpg" />
+    <BundleResource Include="Resources\hour.png" />
+    <BundleResource Include="Resources\test.png" />
+    <BundleResource Include="Resources\speed.png" />
+    <BundleResource Include="Resources\distance.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\Wiwii\Wiwii.projitems" Label="Shared" />
